# team-h

./: .dockerignore  .gitignore  Dockerfile  debug_ha_entities.py  docker-compose.homeassistant.yml  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  run_api.sh  test_refactoring.py
agents/: __init__.py  base_agent.py  base_manager.py  context.py  manager_d.py  manager_i.py  manager_m.py  manager_s.py  manager_t.py  middlewares.py  team_h_graph.py
agents/graph/: __init__.py  graph.py  nodes.py  state.py  utils.py
agents/middleware/: __init__.py
agents/middlewares/: __init__.py  defaults.py  error_handler.py  langfuse_logging.py
agents/prompts/: handoff_common.yaml  manager_d.yaml  manager_i.yaml  manager_m.yaml  manager_s.yaml  manager_t.yaml  router.yaml  router_manager_descriptions.yaml
api/: __init__.py  main.py  models.py
config/: __init__.py  homeassistant_api.py  settings.py
database/postgres/: __init__.py
database/qdrant/: __vector_store_teamh.py  config.py  example.py  fastapi_embedder_adapter.py  manager_m_memory.py  openai_embedder_adapter.py
examples/: langfuse_integration_example.py  streamlit_integration_example.py
streamlits/: agent_factory.py  app.py  auth.py  components.py  config.py  streamlit_manager_i.py  streamlit_manager_m.py  streamlit_manager_s.py  streamlit_team_h_graph.py
streamlits/core/: agent_factory.py  auth.py  config.py
streamlits/ui/: approval.py  components.py
tests/: test_stt.py  test_team_h_assert.py  test_tool_format.py  test_vllm_structured_output.py
utils/: __init__.py  llm_factory.py
(+15 files in other folders)
